[package]
name = "Greaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4.1"
futures = "0.3.28"
futures-util = "0.3.28"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt", "sync", "time", "rt-multi-thread", "stats", "tracing", "io-std", "io-util", "process", "test-util"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = { version = "0.7.7", features = ["codec", "rt", "io-util", "time"] }
tracing-futures = { version = "0.2.5", features = ["tokio"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]
